# nixos-modules-contrib

./: README.md  pyproject.toml
nixos_modules_contrib/: plugin.py
nixos_modules_contrib/nix/: default.nix
